eucf-website/src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --font-heading: var(--font-roboto-condensed);
  --color-heading: #1C1C1C;
  --animate-scroll-left: scroll-left 65s linear infinite;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  font-family: Arial, Helvetica, sans-serif;
}

@keyframes scroll-left {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-50%);
  }
}

@media (hover: hover) {
  .carousel-track:has(:hover) {
    animation-play-state: paused;
  }
}

.text-outline {
  text-shadow:
    -3px -3px 0 black,
     3px -3px 0 black,
    -3px  3px 0 black,
     3px  3px 0 black,
     0px -3px 0 black,
     0px  3px 0 black,
    -3px  0px 0 black,
     3px  0px 0 black;
}

